# Confrencing_Audio_Python

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  _tmp_viewbar_check.py  pyproject.toml  requirements-dev.txt  run_gui.py
.claude/agents/: docs-maintainer.md  dsp-realtime-reviewer.md  green-gate.md  schema-parity-guard.md
.github/workflows/: ci.yml
.sdd/: task-2-report.md  task-3-report.md  task-8-report.md
conf_pipeline/: __init__.py  angles.py  api.py  blocks.py  control_api.py  coverage.py  coverage_check.py  coverage_sim.py  deployment.py  devices.py  directivity.py  dsp.py  files.py  furniture.py  matrix.py  model.py  naming.py  persistence.py  profiles.py  project.py  report.py  routing.py  scheduler.py  seat_mapper.py  seat_zones.py  templates.py  transport.py  validation.py
conf_pipeline/sim/: __init__.py  scoring.py  search.py  types.py  validate.py
conf_pipeline_control/: __init__.py  _stage_metrics.py  ab_capture.py  ab_test.py  agc.py  audio.py  autosteer.py  beam_engine.py  beamformer.py  calibration.py  control.py  deepfilter_cleaner.py  doa.py  egress.py  fence.py  geometry.py  listening_profile.py  live.py  lobe_control.py  model.py  multibeam.py  multikit.py  multiroom.py  octovox_bridge.py  octovox_monitor.py  operator.py  peq.py  placement.py  polaris_beamformer.py  pre_nr.py  preamp.py  reference_capture.py  room_profile.py  rtf_mvdr.py  steering.py  streaming_aec.py  streaming_cleaner.py  tracking.py  transcription.py  transient.py  (+2 more)
conf_pipeline_control/models/: deepfilternet3_streaming.onnx
conf_pipeline_gui/: __init__.py  app.py  canvas.py  guide.py  icons.py  inspector.py  issues.py  modebar.py  scenarios.py  simbar.py  state.py  theme.py  toolrail.py  viewbar.py  workflow.py
conf_pipeline_gui/panels/: __init__.py  common.py  deploy.py  design.py  first_run.py  live.py  operator.py  room_profile.py  route.py  simulate.py
docs/: AUDIO_EGRESS_GUIDE.md  AUDIO_FRONTEND_DEPLOYMENT_GUIDE.md  AUDIO_FRONTEND_PHASE_TRACKER.md  AUDIO_FRONTEND_PRODUCTION_GAPS.md  AUDIO_OPERATOR_WORKFLOW_GUIDE.md  AUDIO_ROOM_PROFILE_GUIDE.md  CALIBRATION_GUIDE.md  Conferencing-Audio-Pipeline-Summary.html  LISTENING_PROFILES_GUIDE.md  LOBE_CONTROL_GUIDE.md  PLACEMENT_CHECK_GUIDE.md  PRE_NR_CLEANUP_GUIDE.md  TRANSCRIPTION_STREAM_GUIDE.md
reports/audio/: final_verification_report.md  phase0_discovery_report.md  phase10_listening_profiles_discovery.md  phase10_listening_profiles_report.md  phase11_lobe_control_discovery.md  phase11_lobe_control_report.md  phase1_calibration_report.md  phase2_pipeline_order_report.md  phase3_placement_check_report.md  phase4_egress_report.md  phase5_transcription_ready_report.md  phase6_gui_operator_workflow_report.md  (+2 more)
scripts/: _shot.py  area_autosteer.py  calibrate_capsules.py  calibrate_front.py  capture_everyone.py  check_placement.py  desk_isolation.py  device_check.py  learn_bearing.py  operator_diagnostics.py  polaris_beam_demo.py  validate_live_enhance.py
tests/: conftest.py  test_ab_capture.py  test_ab_test.py  test_active_zone_gain.py  test_aec.py  test_aperture_scoring.py  test_audio_room_profile.py  test_auto_route.py  test_beam_engine.py  test_beamformer.py  test_calibration.py  test_calibration_apply.py  test_camera_api.py  test_camera_furniture.py  test_control.py  test_control_api.py  test_coverage.py  test_coverage_check.py  test_coverage_sim.py  test_coverage_sim_aperture.py  test_coverage_warnings.py  test_deepfilter_cleaner.py  test_designer_1_12.py  test_designer_1_8.py  test_directivity.py  test_directivity_calibration.py  test_doa.py  test_egress.py  test_fence.py  test_files.py  test_first_run_guide.py  test_gui_auto_seat_zones.py  test_gui_autosteer_sectors.py  test_gui_calibrate_front.py  test_gui_calibration_apply.py  test_gui_coverage.py  test_gui_fence.py  test_gui_learn_bearing.py  test_gui_listening_profiles.py  test_gui_live_seat.py  (+63 more)
(+9 files in other folders)
