[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conferencing-audio-pipeline"
version = "1.17.0"
description = "Configuration, routing, and validation control plane for a networked-conferencing audio system, with a PySide6 workflow-modes desktop app (2D/3D layout editor, live array operations view) and optional host-side array-microphone beamforming control. Not a real-time DSP engine at its core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["PySide6>=6.6"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "mypy>=1.8"]   # exact pins: requirements-dev.txt
sim = ["numpy>=1.24"]                                        # far-field validation backend
sim-rir = ["pyroomacoustics>=0.7", "numpy>=1.24", "scipy>=1.7"]  # image-source RIR backend
control = ["numpy>=1.24", "sounddevice>=0.4"]               # live host-side beamforming of a real array
octovox = ["numpy>=1.24", "sounddevice>=0.4", "requests>=2.25", "scipy>=1.7"]  # bridge to the OCTOVOX cleaning server

[project.scripts]
conf-pipeline-gui = "conf_pipeline_gui.app:main"
polaris-beam-demo = "conf_pipeline_control.polaris_beamformer:_demo"
polaris-vmic-demo = "conf_pipeline_control.virtual_mic_grid:_demo"
polaris-beam-engine-demo = "conf_pipeline_control.beam_engine:_demo"

[tool.setuptools]
packages = ["conf_pipeline", "conf_pipeline.sim", "conf_pipeline_gui", "conf_pipeline_gui.panels", "conf_pipeline_control"]

[tool.setuptools.package-data]
conf_pipeline_gui = ["assets/*.png", "assets/*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
# Typed surface: the pure-stdlib engine + the host-side control package.
# The Qt GUI is exercised by the headless smoke tests instead.
files = ["conf_pipeline", "conf_pipeline_control"]
python_version = "3.10"
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Optional-extra deps without type stubs (imported behind availability gates).
module = ["sounddevice", "sounddevice.*", "pyroomacoustics", "pyroomacoustics.*", "scipy", "scipy.*"]
ignore_missing_imports = true
